# lift

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
gradle/wrapper/: gradle-wrapper.properties
include/: CMakeLists.txt  application.h  factory.h  function_traits.h  static_for.h
include/lift/: CMakeLists.txt  application.h  call.h  factory.h  function_traits.h  index_tuple.h  object.h  object_repository.h  parameter_expander.h  static_for.h
include/lift/framework/: CMakeLists.txt  call.h  factory.h  object_repository.h
include/lift/metadata/: CMakeLists.txt  function_traits.h  static_for.h
include/lift_metadata/: CMakeLists.txt  function_traits.h  static_for.h
src/: CMakeLists.txt
src/lift_metadata/: CMakeLists.txt
test/: CMakeLists.txt
test/framework/: CMakeLists.txt  application_test.cpp
test/lift/: CMakeLists.txt  application_test.cpp  application_test.h  function_traits_test.cpp  function_traits_test.h  main.cpp  static_for_test.cpp  static_for_test.h
test/lift/framework/: CMakeLists.txt  application_test.cpp
test/lift/metadata/: CMakeLists.txt  function_traits_test.cpp  static_for_test.cpp
test/lift_metadata_tests/: CMakeLists.txt  function_traits_tests.cpp  static_for_tests.cpp
test/metadata/: CMakeLists.txt  function_traits_test.cpp  static_for_test.cpp
